# NovelCraft

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  chapters_outline.json  consistency_report.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
novel_cli/: main.py
novel_cli/commands/: chat.py  config.py  continue_.py  edit.py  generate.py  outline.py  write.py
novel_cli/core/: chat_session.py  client.py  config.py  exceptions.py  generator.py
novel_cli/utils/: display.py
tests/: conftest.py  test_api_integration.py  test_chat_session.py  test_cli_integration.py  test_config.py  test_config_extended.py  test_edit.py  test_generator.py  test_write.py
